<resources>
  <string name="app_name">Baking App</string>

  <string name="activity_main_no_internet">Internet is not Connected !</string>
  <string name="activity_main_with_internet">Internet is Connected !</string>

  <string name="activity_detail_title">Recipe Detail</string>
  <string name="activity_detail_textview_ingredient">Ingredients</string>
  <string name="activity_detail_textview_step">Steps</string>

  <string name="adapter_recipe_detail_left_recipeingredients">Recipe Ingredients</string>

  <string name="content_recipe_detail_item_right_recipelist">Recipe Ingredients</string>
  <string name="content_recipe_detail_item_right_buttonprev">Prev</string>
  <string name="content_recipe_detail_item_right_buttonnext">Next</string>

  <string name="content_recipe_list_item_imageview_contentdesc">Recipe</string>

  <string name="appwidget_text">Recipe Ingredient</string>
  <string name="configure">Configure</string>
  <string name="add_widget">Add widget</string>
</resources>
