<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/content_recipe_list_frame"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginLeft="@dimen/layout_margin"
  android:layout_marginRight="@dimen/layout_margin"
  app:layoutManager="GridLayoutManager"
  tools:context="com.example.standard.bakingapp.app.ActivityMain">

</android.support.v7.widget.RecyclerView>