<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/content_recipe_detail_item_right_recipelist"
    android:textSize="@dimen/big_text_size"/>

  <TextView
    android:id="@+id/content_recipe_detail_item_right_textview_recipeingredient"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

</LinearLayout>