<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginLeft="16dp"
  android:layout_marginRight="16dp"
  android:baselineAligned="false"
  android:divider="?android:attr/dividerHorizontal"
  android:orientation="horizontal"
  android:showDividers="middle"
  tools:context="com.example.standard.bakingapp.app.ActivityDetail">

  <android.support.v7.widget.RecyclerView
    android:id="@+id/content_recipe_detail_framerecipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/layout_margin"
    android:layout_marginRight="@dimen/layout_margin"/>
</LinearLayout>